--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 	</head>
 	<body>
 		<nav class="navbar">
-			<div id="logo">navbar</div>
-			<ul id="items">
-				<li>home</li>
-				<li>about</li>
-				<li>service</li>
-				<li>portfolio</li>
-				<li>contact</li>
+			<div class="logo">navbar</div>
+			<ul class="nav-links">
+				<li><a href="#">home</a></li>
+				<li><a href="#">about</a></li>
+				<li><a href="#">work</a></li>
+				<li><a href="#">projects</a></li>
 			</ul>
+			<div class="burger">
+				<div class="line1"></div>
+				<div class="line2"></div>
+				<div class="line3"></div>
+			</div>
 		</nav>
 	</body>
 </html>
