--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<title>Simple navbar</title>
+		<title>Simple Navbar</title>
 		<link rel="stylesheet" href="./style.css" />
 	</head>
 	<body>
@@ -22,5 +22,6 @@
 				<div class="line3"></div>
 			</div>
 		</nav>
+		<script src="./script.js"></script>
 	</body>
 </html>
